--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserActivity2"></activity>
-        <activity android:name=".ActivityLogin" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Red"></activity>
+        <activity android:name=".UserActivity2" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ActivityLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
